[package]
name = "gladki-sph"
version = "0.1.0"
authors = ["khskarl"]
edition = "2018"

[dependencies]
js-sys = "0.3.14"
serde = "1.0.88"
serde_derive = "1.0.88"

[dependencies.nalgebra]
version = "0.17.2"
features = ["serde-serialize"]

[dependencies.wasm-bindgen]
version = "0.2.37"
features = ["serde-serialize"]
